--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
+    "react-redux-loading-bar": "^5.0.8",
     "redux": "^5.0.1"
   },
   "devDependencies": {
