--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
+    "html-react-parser": "^5.1.8",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
