--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "html-react-parser": "^5.1.8",
     "next": "14.1.0",
     "react": "^18",
+    "react-contenteditable": "^3.3.7",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
