--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-contenteditable": "^3.3.7",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-images-uploading": "^3.1.7",
     "react-redux": "^9.1.0",
     "react-redux-loading-bar": "^5.0.8",
     "redux": "^5.0.1"
