--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest --no-watch",
+    "e2e": "cypress run",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "ci:test": "vitest --no-watch && start-server-and-test dev http-get://0.0.0.0:5173 e2e"
+    "ci:test": "jest --no-watch && start-server-and-test dev http-get://0.0.0.0:3000 e2e"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
