--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux": "^5.0.1"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.23.3",
     "@storybook/addon-essentials": "^7.6.17",
     "@storybook/addon-interactions": "^7.6.17",
     "@storybook/addon-links": "^7.6.17",
@@ -38,6 +39,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -60,6 +62,7 @@
     "start-server-and-test": "^2.0.3",
     "storybook": "^7.6.17",
     "tailwindcss": "^3.3.0",
+    "ts-jest": "^29.1.2",
     "typescript": "^5"
   }
 }
