jest config for component testing (not tested yet)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,5 +12,13 @@
   },
   "env": {
     "cypress/globals": true
-  }
+  },
+  "overrides": [
+    {
+      "files": ["tests/**/*"],
+      "env": {
+        "jest": true
+      }
+    }
+  ]
 }
