--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint-plugin-storybook": "^0.8.0",
     "install": "^0.13.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^24.0.0",
     "postcss": "^8",
     "prettier": "^3.2.5",
