--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
+    "@storybook/react": "^8.0.0",
     "html-react-parser": "^5.1.8",
     "next": "14.1.0",
     "react": "^18",
@@ -35,9 +36,9 @@
     "@storybook/addon-interactions": "^7.6.17",
     "@storybook/addon-links": "^7.6.17",
     "@storybook/addon-onboarding": "^1.0.11",
+    "@storybook/addon-styling-webpack": "^0.0.6",
     "@storybook/blocks": "^7.6.17",
     "@storybook/nextjs": "^7.6.17",
-    "@storybook/react": "^7.6.17",
     "@storybook/test": "^7.6.17",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.2.1",
